<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="@string/calc_text"
        android:textSize="48sp"
        style="@style/TEXT"
        android:gravity="right|bottom"
        android:padding="20dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        style="@style/BTNLAYOUTBG"
        >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"

         >

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_ac"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:textSize="24sp"
             android:text="@string/_ac"
             style="@style/BTNBG"
             android:textColor="@color/orange"
             android:onClick="onClear"
             android:background="@drawable/shape"/>

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_clear_one"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:textColor="@color/orange"
             android:textSize="24sp"
             style="@style/BTNBG"
             android:onClick="removeByOne"
             android:layout_marginStart="15dp"
             android:background="@drawable/shape"
             android:drawableStart="@drawable/baseline_cancel_one"
             android:paddingStart="25dp" />

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_modulus"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:textSize="24sp"
             android:text="@string/_modulus"
             android:textColor="@color/orange"
             android:onClick="onOperator"
             android:layout_marginStart="15dp"
             style="@style/BTNBG"
             android:background="@drawable/shape"/>

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_divide"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:textSize="24sp"
             android:text="@string/_divide"
             android:textColor="@color/orange"
             style="@style/BTNBG"
             android:onClick="onOperator"
             android:layout_marginStart="15dp"
             android:background="@drawable/shape"
             />

     </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_7"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_8"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                 />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_9"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                style="@style/BTNTEXTBG"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mul"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="*"
                android:textColor="@color/orange"
                style="@style/BTNBG"
                android:onClick="onOperator"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_4"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_5"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_6"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                style="@style/BTNTEXTBG"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sub"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_subtract"
                android:textColor="@color/orange"
                style="@style/BTNBG"
                android:onClick="onOperator"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_1"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_2"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_3"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                style="@style/BTNTEXTBG"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="+"
                android:textColor="@color/orange"
                style="@style/BTNBG"
                android:onClick="onOperator"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_c"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_c"
                android:textColor="@color/orange"
                style="@style/BTNBG"
                android:onClick="onClear"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_0"
                style="@style/BTNTEXTBG"
                android:onClick="onDigit"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dot"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="@string/_dot"
                android:onClick="onDecimalPoint"
                android:layout_marginStart="15dp"
                style="@style/BTNTEXTBG"
                android:background="@drawable/shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="24sp"
                android:text="="
                android:backgroundTint="@color/orange"
                android:onClick="onEqual"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>